# PBIP-Factory

./: .gitignore  README.md  USAGE_GUIDE.md  install.ps1  install.py  install.sh  pyproject.toml  requirements.txt
Example_PBIP/Example_PBIP.Report/: .platform
configs/: example_config.yaml
data/: pbip_data.csv
examples/configs/: pbip_config.yaml  pbix_config.yaml  sample_config.yaml
examples/data/: pbip_data.csv  sample_data.csv
examples/templates/: sample_template.pbip
output/Central_Report/: Central_Report.pbip
output/Central_Report/Central_Report.Report/: .platform  definition.pbir
output/Central_Report/Central_Report.SemanticModel/: .platform  diagramLayout.json  model.bim
output/East_Report/: East_Report.pbip
output/East_Report/East_Report.Report/: .platform  definition.pbir
output/East_Report_Finance_Team/: Example_PBIP.pbip
output/East_Report_Finance_Team/Example_PBIP.SemanticModel/: model.bim
output/North_Report/: North_Report.pbip
output/North_Report/North_Report.Report/: definition.pbir  report.json
output/South_Report/: South_Report.pbip
output/South_Report/South_Report.Report/: definition.pbir
output/South_Report/South_Report.SemanticModel/: model.bim
output/West_Report/: West_Report.pbip
output/West_Report/West_Report.Report/: .platform
output/West_Report/West_Report.SemanticModel/: .platform  model.bim
output/West_Report_HR_Team/Example_PBIP.Report/: definition.pbir
outputs/Example_PBIP_OUTPUTS/East_Report/East_Report.SemanticModel/: .platform
outputs/Example_PBIP_OUTPUTS/North_Report/North_Report.Report/: .platform
outputs/Example_PBIP_OUTPUTS/North_Report/North_Report.SemanticModel/: .platform  model.bim
outputs/Example_PBIP_OUTPUTS/South_Report/South_Report.Report/: .platform
outputs/Example_PBIP_OUTPUTS/South_Report/South_Report.SemanticModel/: .platform
outputs/Example_PBIP_OUTPUTS/West_Report/West_Report.Report/: definition.pbir
src/pbi_automation/: cli.py
src/pbi_automation/core/: processor.py  validator.py
src/pbi_automation/database/: connection.py
src/pbi_automation/models/: config.py  data.py  pbip.py
src/pbi_automation/utils/: cli_utils.py  discovery.py  file_utils.py  logger.py  tmdl_parser.py  yaml_editor.py
templates/Example_PBIP/Example_PBIP.Report/.pbi/: localSettings.json
templates/Example_PBIP/Example_PBIP.SemanticModel/: .platform  model.bim
templates/Example_PBIP/Example_PBIP.SemanticModel/.pbi/: cache.abf  localSettings.json
tests/: test_cli.py  test_models.py  test_processor.py  test_tmdl_parser.py
