[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pbi-template-automation"
version = "0.1.0"
description = "A tool for automating Power BI template (PBIP) generation with parameter updates"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Power BI Template Automation Team", email = "team@example.com"}
]
keywords = ["powerbi", "automation", "template", "pbip"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "ruamel.yaml>=0.18.0",
    "structlog>=23.0.0",
    "inquirer>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[project.scripts]
pbi-automation = "pbi_automation.cli:app"

[project.urls]
Homepage = "https://github.com/George-Nizor/_PBI_Template_Automation"
Repository = "https://github.com/George-Nizor/_PBI_Template_Automation"
Documentation = "https://github.com/George-Nizor/_PBI_Template_Automation#readme"
Issues = "https://github.com/George-Nizor/_PBI_Template_Automation/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pbi_automation"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/examples",
    "/Example_PBIP",
    "*.md",
    "*.toml",
    "*.yaml",
    "*.yml",
    "*.csv",
    "*.ps1",
    "*.sh",
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["pbi_automation"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=pbi_automation",
    "--cov-report=term-missing",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
] 